# pixeon-image-viewer

./: .gitignore  CMakeLists.txt  README.md
docs/: Relatorio_Tecnico.md  backlog.md  plan.md  relatorio.tex  requisitos.md
resources/: resources.qrc
src/: CMakeLists.txt  main.cpp
src/controller/: ImageProcessor.cpp  ImageProcessor.h
src/model/: ImageCollection.cpp  ImageCollection.h  ImageModel.cpp  ImageModel.h
src/view/: ImageViewWidget.cpp  ImageViewWidget.h  MainWindow.cpp  MainWindow.h
tests/: CMakeLists.txt  tst_placeholder.cpp
